--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Christmas Tree</title>
 </head>
-<body>
+<body style="margin: 10% 30%">
     <div id="tree"></div>
 </body>
+
+<script src="./fir.js"></script>
+<style>
+    body {
+        background: black;
+        color: green;
+        font-size: 30px;
+    }
+</style>
 </html>
