--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <div id="tree"></div>
 </body>
 
-<script src="./fir.js"></script>
+<script type="module" src="tree.js"></script>
+<script type="module" src="lights.js"></script>
 <style>
     body {
         background: black;
