--- a/index.html
+++ b/index.html
@@ -12,11 +12,17 @@
 
 <script type="module" src="tree.js"></script>
 <script type="module" src="lights.js"></script>
+<script type="module" src="star.js"></script>
 <style>
     body {
         background: black;
         color: green;
         font-size: 30px;
+    }
+
+    .star {
+        color: yellow;
+        font-size: 35px;
     }
 </style>
 </html>
